--- a/style.css
+++ b/style.css
@@ -11,15 +11,26 @@
     box-sizing: border-box;
 }
 
+body {
+    overflow-x: hidden;
+    background-color: #0a0a0a;
+    background-image: 
+        linear-gradient(rgba(255, 255, 255, 0.02) 1px, transparent 1px),
+        linear-gradient(90deg, rgba(255, 255, 255, 0.02) 1px, transparent 1px);
+    background-size: 20px 20px;
+}
+
+/* Navbar Section */
 header {
     font-family: 'Cairo', sans-serif;
-    background-color: var(--mainColor);
+    background-color: transparent;
     color: white;
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
-    padding: 15px 20px;
+    padding: 25px;
+    z-index: 9999;
 }
 
 nav {
@@ -72,16 +83,17 @@ main {
     height: auto;
 }
 
+/* Hero Section */
 .hero {
     font-family: 'Poppins', sans-serif;
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
-    background-color: var(--mainColor);
     color: white;
     text-align: center;
     display: flex;
     justify-content: center;
-    padding-top: 11rem;
+    align-items: center;
+    gap: 2rem;
 }
 
 .hero-text {
@@ -119,11 +131,73 @@ main {
     font-size: 0.9rem;
     text-decoration: none;
     font-weight: 500;
-    color: white;
-    margin: 0 10px;
     background-color: var(--textColor);
+    color: white;
+    display: inline-block;
+    margin: 0 15px;
     padding: 10px ;
     border-radius: 10px;
+    transition: all 0.5s ease;
 }
+
+.hero-button a:hover {
+    transform: scale(1.15);
+    transition: transform 1 ease;
+}
+
+.tag-list {
+    width: 50rem;
+    position: relative;
+    overflow: hidden;
+}
+
+.inner {
+    width: max-content;
+    display: flex;
+    gap: 1rem;
+    animation: loop 10s linear infinite;
+}
+
+.tag {
+    display: flex;
+    align-items: center;
+    gap: 0 0.2rem;
+    font-size: 2rem;
+    padding: 0.7rem 1rem;
+    
+}
+
+.tag::after {
+    content: '|';
+    margin-left: 2rem;
+    color: white;
+}
+
+.fade {
+    position: absolute;
+    /* background: linear-gradient(90deg, #1e293b, transparent 30%, transparent 70%, #1e293b); */
+    inset: 0;
+    pointer-events: none;
+}
+
+@keyframes loop {
+    0% {
+        transform: translateX(0);
+        -webkit-transform: translateX(0);
+        -moz-transform: translateX(0);
+        -ms-transform: translateX(0);
+        -o-transform: translateX(0);
+    }
+    100% {
+        transform: translateX(-50%);
+        -webkit-transform: translateX(-50%);
+        -moz-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+        -o-transform: translateX(-50%);
+    }
+    
+}
+
+
 
 
